fixed homepage property value in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://fltfx.github.io/fltfx.github.io",
+  "homepage": "https://fltfx.github.io/fltfx.github.io",
   "name": "cw_portfolio1",
   "version": "0.1.0",
   "private": true,
